# zebra

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: fork-v45-trace-release-artifacts.yml
art/inbox/: repo_snapshot_summary_202-02.md  traces_meaning.md
book/src/user/: custom-testnets.md  regtest.md
docker/: Dockerfile.kresko  ubuntu-package.Dockerfile
xtask/src/: main.rs
zebra-chain/src/: local_genesis.rs  value_balance.rs
zebra-chain/src/parameters/: network.rs  network_upgrade.rs
zebra-chain/src/parameters/network/: testnet.rs
zebra-chain/src/work/: equihash.rs
zebra-consensus/: Cargo.toml
zebra-consensus/benches/: worst_case_tx_verification.rs
zebra-consensus/src/: block.rs  checkpoint.rs
zebra-consensus/src/block/: check.rs
zebra-jsonl-trace/src/: lib.rs
zebra-network/: Cargo.toml
zebra-network/src/: address_book.rs  config.rs  constants.rs  lib.rs  meta_addr.rs  p2p_tracing.rs
zebra-network/src/p2p_tracing/: tests.rs
zebra-network/src/peer/: connection.rs  handshake.rs
zebra-network/src/peer_set/: initialize.rs  set.rs
zebra-network/tests/: acceptance.rs
zebra-state/: Cargo.toml
zebra-state/src/: constants.rs  error.rs
zebra-state/src/service/: non_finalized_state.rs
zebra-trace/: Cargo.toml
zebra-trace/src/: config.rs  counters.rs  envelope.rs  lib.rs  tests.rs  tracer.rs  writer.rs
zebra-trace/src/schema/: block.rs  mod.rs  peer.rs  tx.rs
zebrad/: Cargo.toml
zebrad/src/: components.rs  config.rs
zebrad/src/commands/: start.rs
zebrad/src/components/: inbound.rs  mempool.rs  miner.rs  sync.rs
(+31 files in other folders)
