[package]
name = "zebra-trace"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Structured JSONL tracing for Zebra"

[dependencies]
crossbeam-channel = { workspace = true }
humantime = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

zebra-chain = { path = "../zebra-chain", version = "5.0.0" }

[dev-dependencies]
tempfile = { workspace = true }
